--- a/templates/operations/other-ops.html
+++ b/templates/operations/other-ops.html
@@ -126,7 +126,7 @@
                                             <td>{{ other_op.item }}</td>
                                             <td>
                                                 {% if other_op.status == 0 %}
-                                                    <span class="badge badge-pill badge-primary">Pending</span>
+                                                    <span class="badge badge-pill bg-blue">Pending</span>
                                                 {% elif other_op.status == 1 %}
                                                     <span class="badge badge-pill bg-green">Active</span>
                                                 {% elif other_op.status == 2 %}
