--- a/templates/operations/tickets.html
+++ b/templates/operations/tickets.html
@@ -132,7 +132,7 @@
                                             <td>{{ ticket.departure_date }}</td>
                                             <td>
                                                 {% if ticket.status == 0 %}
-                                                    <span class="badge badge-pill badge-primary">Pending</span>
+                                                    <span class="badge badge-pill bg-blue">Pending</span>
                                                 {% elif ticket.status == 1 %}
                                                     <span class="badge badge-pill bg-green">Active</span>
                                                 {% elif ticket.status == 2 %}
