--- a/templates/others/tasks.html
+++ b/templates/others/tasks.html
@@ -45,7 +45,7 @@
                                             <td>{{ task.task }}</td>
                                             <td>
                                                 {% if task.status == 0 %}
-                                                    <span class="badge badge-pill badge-primary">Pending</span>
+                                                    <span class="badge badge-pill bg-blue">Pending</span>
                                                 {% elif task.status == 1 %}
                                                     <span class="badge badge-pill bg-green">Active</span>
                                                 {% elif task.status == 2 %}
