--- a/templates/operations/contracts.html
+++ b/templates/operations/contracts.html
@@ -115,6 +115,7 @@
                                         <th>Client</th>
                                         <th>Submission Date</th>
                                         <th>Empoloyer</th>
+                                        <th>Passport</th>
                                         <th>Status</th>
                                         <th>Created</th>
                                         <th>Actions</th>
@@ -127,8 +128,23 @@
                                             <td>{{ contract.submission_date }}</td>
                                             <td>{{ contract.employer }}</td>
                                             <td>
+                                                {% if contract.client.passport.status == 0 %}
+                                                    <span class="badge badge-pill bg-blue">Pending</span>
+                                                {% elif contract.client.passport.status == 1 %}
+                                                    <span class="badge badge-pill bg-green">Active</span>
+                                                {% elif contract.client.passport.status == 2 %}
+                                                    <span class="badge badge-pill bg-orange">Done</span>
+                                                {% elif contract.client.passport.status == 3 %}
+                                                    <span class="badge badge-pill bg-red">Cancelled</span>
+                                                {% elif contract.client.passport.status == 4 %}
+                                                    <span class="badge badge-pill bg-green">Passed</span>
+                                                {% else %}
+                                                    <span class="badge badge-pill bg-red">Failed</span>
+                                                {% endif %}
+                                            </td>
+                                            <td>
                                                 {% if contract.status == 0 %}
-                                                    <span class="badge badge-pill badge-primary">Pending</span>
+                                                    <span class="badge badge-pill bg-blue">Pending</span>
                                                 {% elif contract.status == 1 %}
                                                     <span class="badge badge-pill bg-green">Active</span>
                                                 {% elif contract.status == 2 %}
