--- a/templates/operations/medicals.html
+++ b/templates/operations/medicals.html
@@ -114,6 +114,8 @@
                                     <tr>
                                         <th>Client</th>
                                         <th>Medical Type</th>
+                                        <th>Musaned</th>
+                                        <th>Interview</th>
                                         <th>Status</th>
                                         <th>Created</th>
                                         <th>Actions</th>
@@ -133,8 +135,30 @@
                                                 {% endif %}
                                             </td>
                                             <td>
+                                                {% if medical.client.vetting.musaned %}
+                                                    <span class="badge badge-pill bg-green">Done</span>
+                                                {% else %}
+                                                    <span class="badge badge-pill bg-blue">Pending</span>
+                                                {% endif %}
+                                            </td>
+                                            <td>
+                                                {% if medical.client.interview.status == 0 %}
+                                                    <span class="badge badge-pill bg-blue">Pending</span>
+                                                {% elif medical.client.interview.status == 1 %}
+                                                    <span class="badge badge-pill bg-green">Active</span>
+                                                {% elif medical.client.interview.status == 2 %}
+                                                    <span class="badge badge-pill bg-orange">Done</span>
+                                                {% elif medical.client.interview.status == 3 %}
+                                                    <span class="badge badge-pill bg-red">Cancelled</span>
+                                                {% elif medical.client.interview.status == 4 %}
+                                                    <span class="badge badge-pill bg-green">Passed</span>
+                                                {% else %}
+                                                    <span class="badge badge-pill bg-red">Failed</span>
+                                                {% endif %}
+                                            </td>
+                                            <td>
                                                 {% if medical.status == 0 %}
-                                                    <span class="badge badge-pill badge-primary">Pending</span>
+                                                    <span class="badge badge-pill bg-blue">Pending</span>
                                                 {% elif medical.status == 1 %}
                                                     <span class="badge badge-pill bg-green">Active</span>
                                                 {% elif medical.status == 2 %}
