--- a/templates/operations/passports.html
+++ b/templates/operations/passports.html
@@ -130,7 +130,7 @@
                                             <td>{{ passport.expiry_date }}</td>
                                             <td>
                                                 {% if passport.status == 0 %}
-                                                    <span class="badge badge-pill badge-primary">Pending</span>
+                                                    <span class="badge badge-pill bg-blue">Pending</span>
                                                 {% elif passport.status == 1 %}
                                                     <span class="badge badge-pill bg-green">Active</span>
                                                 {% elif passport.status == 2 %}
