--- a/templates/operations/travel-plans.html
+++ b/templates/operations/travel-plans.html
@@ -113,7 +113,8 @@
                                 <thead>
                                     <tr>
                                         <th>Client</th>
-                                        <th>Item</th>
+                                        <th>Description</th>
+                                        <th>Ticket</th>
                                         <th>Status</th>
                                         <th>Created</th>
                                         <th>Actions</th>
@@ -123,10 +124,26 @@
                                     {% for plan in travel_plans %}
                                         <tr>
                                             <td>{{ plan.client }}</td>
-                                            <td>{{ plan.item }}</td>
+                                            <td>{{ plan.description }}</td>
+                                            <td>
+                                                {% if plan.client.ticket.status == 0 %}
+                                                    <span class="badge badge-pill bg-blue">Pending</span>
+                                                {% elif plan.client.ticket.status == 1 %}
+                                                    <span class="badge badge-pill bg-green">Active</span>
+                                                {% elif plan.client.ticket.status == 2 %}
+                                                    <span class="badge badge-pill bg-orange">Done</span>
+                                                {% elif plan.client.ticket.status == 3 %}
+                                                    <span class="badge badge-pill bg-red">Cancelled</span>
+                                                {% elif plan.client.ticket.status == 4 %}
+                                                    <span class="badge badge-pill bg-green">Passed</span>
+                                                {% else %}
+                                                    <span class="badge badge-pill bg-red">Failed</span>
+                                                {% endif %}
+                                            </td>
+                                            
                                             <td>
                                                 {% if plan.status == 0 %}
-                                                    <span class="badge badge-pill badge-primary">Pending</span>
+                                                    <span class="badge badge-pill bg-blue">Pending</span>
                                                 {% elif plan.status == 1 %}
                                                     <span class="badge badge-pill bg-green">Active</span>
                                                 {% elif plan.status == 2 %}
