--- a/templates/operations/vetting/album.html
+++ b/templates/operations/vetting/album.html
@@ -5,7 +5,88 @@
     
     <section class="">
         <div class="">
-           
+            <!-- Widgets -->
+            <div class="row clearfix">
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-6">
+                    <div class="info-box bg-blue hover-expand-effect">
+                        <div class="icon">
+                            <a href="/admin/operations/vetting?status__exact=0">
+                                <i class="material-icons">person</i>
+                            </a>
+                        </div>
+                        <div class="content">
+                            <div class="text"><h5>Pending</h5></div>
+                            <h4><strong>{{ pending }}</strong></h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-6">
+                    <div class="info-box bg-brown hover-expand-effect">
+                        <div class="icon">
+                            <a href="/admin/operations/vetting?status__exact=1">
+                                <i class="material-icons">refresh</i>
+                            </a>
+                        </div>
+                        <div class="content">
+                            <div class="text"><h5>Active</h5></div>
+                            <h4><strong>{{ active }}</strong></h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-6">
+                    <div class="info-box bg-green hover-expand-effect">
+                        <div class="icon">
+                            <a href="/admin/operations/vetting?status__exact=2">
+                                <i class="material-icons">done</i>
+                            </a>
+                        </div>
+                        <div class="content">
+                            <div class="text"><h5>Done</h5></div>
+                            <h4><strong>{{ done }}</strong></h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-6">
+                    <div class="info-box bg-pink hover-expand-effect">
+                        <div class="icon">
+                            <a href="/admin/operations/vetting?status__exact=3">
+                                <i class="material-icons">delete</i>
+                            </a>
+                        </div>
+                        <div class="content">
+                            <div class="text"><h5>Cancelled</h5></div>
+                            <h4><strong>{{ cancelled }}</strong></h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-6">
+                    <div class="info-box bg-green hover-expand-effect">
+                        <div class="icon">
+                            <a href="/admin/operations/vetting?status__exact=4">
+                                <i class="material-icons">done</i>
+                            </a>
+                        </div>
+                        <div class="content">
+                            <div class="text"><h5>Passed</h5></div>
+                            <h4><strong>{{ passed }}</strong></h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-6">
+                    <div class="info-box bg-red hover-expand-effect">
+                        <div class="icon">
+                            <a href="/admin/operations/vetting?status__exact=5">
+                                <i class="material-icons">close</i>
+                            </a>
+                        </div>
+                        <div class="content">
+                            <div class="text"><h5>Failed</h5></div>
+                            <h4><strong>{{ failed }}</strong></h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
             <!-- Exportable Table -->
             <div class="row clearfix">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -26,6 +107,7 @@
                                         <th>Client</th>
                                         <th>Submission Date</th>
                                         <th>Empoloyer</th>
+                                        <th>Contract</th>
                                         <th>Status</th>
                                         <th>Created</th>
                                         <th>Actions</th>
@@ -38,8 +120,23 @@
                                             <td>{{ vetting.submission_date }}</td>
                                             <td>{{ vetting.employer }}</td>
                                             <td>
+                                                {% if vetting.client.contract.status == 0 %}
+                                                    <span class="badge badge-pill bg-blue">Pending</span>
+                                                {% elif vetting.client.contract.status == 1 %}
+                                                    <span class="badge badge-pill bg-green">Active</span>
+                                                {% elif vetting.client.contract.status == 2 %}
+                                                    <span class="badge badge-pill bg-orange">Done</span>
+                                                {% elif vetting.client.contract.status == 3 %}
+                                                    <span class="badge badge-pill bg-red">Cancelled</span>
+                                                {% elif vetting.client.contract.status == 4 %}
+                                                    <span class="badge badge-pill bg-green">Passed</span>
+                                                {% else %}
+                                                    <span class="badge badge-pill bg-red">Failed</span>
+                                                {% endif %}
+                                            </td>
+                                            <td>
                                                 {% if vetting.status == 0 %}
-                                                    <span class="badge badge-pill badge-primary">Pending</span>
+                                                    <span class="badge badge-pill bg-blue">Pending</span>
                                                 {% elif vetting.status == 1 %}
                                                     <span class="badge badge-pill bg-green">Active</span>
                                                 {% elif vetting.status == 2 %}
