--- a/templates/operations/visas.html
+++ b/templates/operations/visas.html
@@ -130,7 +130,7 @@
                                             <td>{{ visa.validity }}</td>
                                             <td>
                                                 {% if visa.status == 0 %}
-                                                    <span class="badge badge-pill badge-primary">Pending</span>
+                                                    <span class="badge badge-pill bg-blue">Pending</span>
                                                 {% elif visa.status == 1 %}
                                                     <span class="badge badge-pill bg-green">Active</span>
                                                 {% elif visa.status == 2 %}
