--- a/templates/others/complaints.html
+++ b/templates/others/complaints.html
@@ -45,7 +45,7 @@
                                             <td>{{ complaint.employer }}</td>
                                             <td>
                                                 {% if complaint.client.vetting.status == 0 %}
-                                                    <span class="badge badge-pill badge-primary">Pending</span>
+                                                    <span class="badge badge-pill bg-blue">Pending</span>
                                                 {% elif complaint.client.vetting.status == 1 %}
                                                     <span class="badge badge-pill bg-green">Active</span>
                                                 {% elif complaint.client.vetting.status == 2 %}
