--- a/templates/clients.html
+++ b/templates/clients.html
@@ -48,7 +48,7 @@
                                         <tr>
                                             <td>{{ client }}</td>
                                             <td>{{ client.phone }}</td>
-                                            <td>{{ client.passport }}</td>
+                                            <td>{{ client.passport.passport_no }}</td>
                                             <td>{{ client.job }}</td>
                                             <td>
                                                 {% if client.registered %}
