--- a/templates/cv.html
+++ b/templates/cv.html
@@ -200,7 +200,7 @@
 									<table class="table profile__table">
 										<thead>
 											<tr>
-												<th>Skill | <strong>Arabic</strong></th>
+												<th>Skill</th>
 												<th>Fair</th>
 												<th>Good</th>
 												<th>Excellent</th>
